<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accesibility_label_close_button">Cerrar</string>
    <string name="accesibility_label_favorites">Favoritos</string>
    <string name="accesibility_label_map">Mapa</string>
    <string name="accesibility_label_search">Buscar</string>
    <string name="accesibility_notification_delete_subscription">Dejar de recibir notificaciones sobre %1$s</string>
    <string name="accesibility_notification_subscription">Recibir notificaciones sobre %1$s</string>
    <string name="accesibility_select_id_check_dni30">Imagen de un DNI 3.0</string>
    <string name="accesibility_select_id_check_dni40">Imagen de un DNI 4.0</string>
    <string name="accessibility_switch_orig_dest">Intercambiar origen y destino</string>
    <string name="accessibility_your_ubication">Posicionar el mapa en tu ubicación</string>
    <string name="accessing_nfc">Accediendo al chip NFC</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">CONECTA</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arrival">Llegada</string>
    <string name="authentication_error">Error de autenticación: %1$s</string>
    <string name="back">Atrás</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="button_ok">OK</string>
    <string name="buy_trip">Comprar 1 viaje</string>
    <string name="buy_trips">Comprar %1$d viajes</string>
    <string name="calculate_route">Calcular ruta</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="can">CAN</string>
    <string name="can_number">Número CAN</string>
    <string name="can_placeholder">123456</string>
    <string name="card_added">Tarjeta añadida</string>
    <string name="card_reactivated">La tarjeta ha sido reactivada</string>
    <string name="card_reactivated_requested">La reactivación ha sido solicitada</string>
    <string name="change_biometric">Cambiar biometría</string>
    <string name="change_password">Cambio de contraseña</string>
    <string name="changes_account_ok">Cambios guardados correctamente</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checking_validity">Comprobando validez</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="closeSession">Cerrar sesión</string>
    <string name="closed">Cerrar</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="connection_lost">Se perdió la conexión entre el documento y el teléfono</string>
    <string name="connection_nfc">Creando conexión con el chip NFC</string>
    <string name="data_protection_mandatory">Consentimientos obligatorios para poder usar tu tarjeta de CTA</string>
    <string name="data_protection_not_mandatory">Consentimientos no obligatorios</string>
    <string name="date_placeholder">DD/MM/YY</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="default_web_client_id">775100084731-ar1pa1b5vl54ise8qc3rku5cq8m5fgh0.apps.googleusercontent.com</string>
    <string name="departure">Salida</string>
    <string name="dest_title">destination title</string>
    <string name="dni">ID document</string>
    <string name="dni_es">Documento de identidad</string>
    <string name="dni_placeholder">12345678A</string>
    <string name="dnis">DNI 2.0, DNI 3.0 y DNI 4.0</string>
    <string name="document">Documento</string>
    <string name="document_orientation">Coloque su DNI como se muestra en la siguiente imagen</string>
    <string name="document_tip">Sugerencia: si tiene una funda para teléfono móvil, quítela para obtener una mejor conexión NFC.</string>
    <string name="document_tip_short">Evite mover el documento</string>
    <string name="label_access_continue">Continuar</string>
    <string name="label_access_settings">Configuración de acceso</string>
    <string name="label_agree_terms">Acepto las condiciones</string>
    <string name="label_expired">Caducado</string>
    <string name="label_extended">Ampliado</string>
    <string name="label_info_instructions">Para poder iniciar el proceso es necesario que tengas a mano tu documento de identificación y que aceptes las condiciones del servicio.</string>
    <string name="label_info_representative_description">El alta como representante legal es necesaria para solicitar tarjetas de personas menores de edad o con tutor legal. Se realiza mediante un proceso de identificación digital muy sencillo.</string>
    <string name="label_info_representative_instruction_2">Si ya eres titular de una tarjeta CONECTA puedes agilizar este trámite entrando en tu Área Personal y seleccionar la opción \"Hacerme Representante\".</string>
    <string name="label_info_request_description">La solicitud de tarjeta se realiza mediante un proceso de identificación digital muy sencillo.</string>
    <string name="label_legal_representative">Hacerme representante</string>
    <string name="label_legal_representative_description">Para realizar una solicitud para una persona menor de edad o con tutor legal necesitas registrarte previamente como representante. Si todavía no lo has hecho, utiliza la opción Alta como representante legal de la pantalla anterior.</string>
    <string name="label_legal_representative_title">Personas menores de edad o con tutor legal</string>
    <string name="label_menu_incidents">Incidencias</string>
    <string name="label_menu_more">Más</string>
    <string name="label_menu_route">Cómo llegar</string>
    <string name="label_menu_stops">Paradas y horarios</string>
    <string name="label_menu_transport_card">Tarjeta</string>
    <string name="label_my_account">Mis datos</string>
    <string name="label_my_credit_cards">Tarjetas de pago</string>
    <string name="label_not_used">Título sin utilizar</string>
    <string name="label_recharge">Recargar</string>
    <string name="label_select_id_check_dni30">Si tu DNI es como el de las imágenes, tienes un DNI 3.0 o 4.0.</string>
    <string name="label_select_id_description">Por favor, para continuar selecciona el tipo de tu documento de identificación:</string>
    <string name="label_select_id_dni30">Tengo un DNI 3.0 o 4.0</string>
    <string name="label_select_id_nfc_description">Si dispones de un DNI 3.0 o 4.0, en lugar de capturar con la cámara del móvil tu documento de identificación, realizaremos una lectura del mismo a través del lector NFC.</string>
    <string name="label_select_id_other">Tengo otro documento</string>
    <string name="label_select_id_show_dni30">Clica aquí para saber si tienes un DNI 3.0 o 4.0.</string>
    <string name="label_select_id_title">Documento de identificación</string>
    <string name="label_valid_until">Válido hasta</string>
    <string name="label_zones">Zonas</string>
</resources>