<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <View
        android:id="@+id/view"
        android:background="@color/grey_light_more"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvStopsActionMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/label_menu_stops"
        android:drawableTop="@drawable/selector_ic_bus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintWidth_percent="0.25"
        style="@style/BottomBarButton"/>
    <TextView
        android:id="@+id/tvTransportCardActionMenu"
        android:paddingTop="15dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/label_menu_transport_card"
        android:drawableTop="@drawable/selector_ic_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvStopsActionMenu"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintWidth_percent="0.25"
        style="@style/BottomBarButton"/>
    <TextView
        android:id="@+id/tvRouteActionMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/label_menu_route"
        android:drawableTop="@drawable/selector_ic_route"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTransportCardActionMenu"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintWidth_percent="0.25"
        style="@style/BottomBarButton"/>
    <TextView
        android:id="@+id/tvIncidentsActionMenu"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/label_menu_incidents"
        android:drawableTop="@drawable/selector_ic_incidents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvRouteActionMenu"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintWidth_percent="0.2"
        style="@style/BottomBarButton"/>
    <TextView
        android:id="@+id/tvMoreActionMenu"
        android:paddingTop="18dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/label_menu_more"
        android:drawableTop="@drawable/selector_ic_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvIncidentsActionMenu"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintWidth_percent="0.25"
        style="@style/BottomBarButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
