<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar"/>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/cbAcceptCardRequestTerms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/spacing_small">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/llIntro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_larger"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/tvTextIntro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_info_request_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/TextView"/>
                <TextView
                    android:id="@+id/tvTextRepresentativeIntro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_info_representative_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/TextView"/>
                <TextView
                    android:id="@+id/tvTextRequirements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/label_info_instructions"
                    style="@style/TextView"/>
                <TextView
                    android:id="@+id/tvTextRepresentativeIntro2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/label_info_representative_instruction_2"
                    style="@style/TextView"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/llRepresentative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/llIntro"
                app:layout_constraintStart_toStartOf="@+id/llIntro"
                app:layout_constraintTop_toBottomOf="@+id/llIntro">
                <TextView
                    android:id="@+id/tvLabelRepresentative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/label_legal_representative_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/TextViewBold"/>
                <TextView
                    android:id="@+id/tvTextRepresentative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/label_legal_representative_description"
                    app:layout_constraintEnd_toEndOf="@+id/tvLabelRepresentative"
                    app:layout_constraintStart_toStartOf="@+id/tvLabelRepresentative"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelRepresentative"
                    style="@style/TextView"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tvLabelChooseId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/label_select_id_title"
                app:layout_constraintEnd_toEndOf="@+id/llRepresentative"
                app:layout_constraintStart_toStartOf="@+id/llRepresentative"
                app:layout_constraintTop_toBottomOf="@+id/llRepresentative"
                style="@style/TextViewBold"/>
            <TextView
                android:id="@+id/tvTextNfcRead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/label_select_id_nfc_description"
                app:layout_constraintEnd_toEndOf="@+id/tvLabelChooseId"
                app:layout_constraintStart_toStartOf="@+id/tvLabelChooseId"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelChooseId"
                style="@style/TextView"/>
            <TextView
                android:id="@+id/tvShowDni30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/label_select_id_show_dni30"
                app:layout_constraintEnd_toEndOf="@+id/tvTextNfcRead"
                app:layout_constraintStart_toStartOf="@+id/tvTextNfcRead"
                app:layout_constraintTop_toBottomOf="@+id/tvTextNfcRead"
                style="@style/TextView"/>
            <TextView
                android:id="@+id/tvTextChooseId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/label_select_id_description"
                app:layout_constraintEnd_toEndOf="@+id/tvShowDni30"
                app:layout_constraintStart_toStartOf="@+id/tvShowDni30"
                app:layout_constraintTop_toBottomOf="@+id/tvShowDni30"
                style="@style/TextView"/>
            <TextView
                android:textColor="@color/white"
                android:id="@+id/tvDni30"
                android:background="@drawable/zones_selector_blue"
                android:padding="@dimen/spacing_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/label_select_id_dni30"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/tvTextChooseId"
                app:layout_constraintStart_toStartOf="@+id/tvTextChooseId"
                app:layout_constraintTop_toBottomOf="@+id/tvTextChooseId"
                style="@style/TextView"/>
            <TextView
                android:textColor="@color/white"
                android:id="@+id/tvOtherId"
                android:background="@drawable/zones_selector_blue"
                android:padding="@dimen/spacing_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/label_select_id_other"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/tvDni30"
                app:layout_constraintStart_toStartOf="@+id/tvDni30"
                app:layout_constraintTop_toBottomOf="@+id/tvDni30"
                style="@style/TextView"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clPopupDni30"
                android:background="@drawable/shape_popup_grey"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/tvTextChooseId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <ImageView
                    android:id="@+id/ivClosePopupDni30"
                    android:padding="@dimen/spacing_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close_blue"
                    android:contentDescription="@string/accesibility_label_close_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:id="@+id/tvPopupDni30"
                    android:paddingTop="@dimen/spacing_normal"
                    android:paddingBottom="@dimen/spacing_small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_select_id_check_dni30"
                    android:paddingStart="@dimen/spacing_normal"
                    android:paddingEnd="@dimen/spacing_normal"
                    app:layout_constraintEnd_toStartOf="@+id/ivClosePopupDni30"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/TextView"/>
                <ImageView
                    android:id="@+id/ivPopupDni30"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:src="@drawable/dni_30"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/accesibility_select_id_check_dni30"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPopupDni30"/>
                <ImageView
                    android:id="@+id/ivPopupDni40"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:src="@drawable/dni_40"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/accesibility_select_id_check_dni40"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivPopupDni30"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.Group
                android:id="@+id/gpNfcSupported"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="tvLabelChooseId, tvTextNfcRead, tvShowDni30, tvTextChooseId, tvDni30, tvOtherId"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <CheckBox
        android:id="@+id/cbAcceptCardRequestTerms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:checked="false"
        android:buttonTint="@color/green_toogle_button"
        app:layout_constraintBottom_toTopOf="@+id/btStartCardRequest"
        app:layout_constraintStart_toStartOf="@+id/btStartCardRequest"/>
    <TextView
        android:id="@+id/tvLabelAceptTermsCardRequest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_agree_terms"
        android:fontFamily="@font/helveticaneue_light"
        android:layout_marginEnd="@dimen/spacing_normal"
        app:layout_constraintBottom_toBottomOf="@+id/cbAcceptCardRequestTerms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cbAcceptCardRequestTerms"
        app:layout_constraintTop_toTopOf="@+id/cbAcceptCardRequestTerms"
        style="@style/TextInputView"/>
    <com.google.android.material.button.MaterialButton
        android:enabled="false"
        android:id="@+id/btStartCardRequest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:text="@string/label_access_continue"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Button.ButtonYellow"/>
</androidx.constraintlayout.widget.ConstraintLayout>
