<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/brCtaPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvNumZones, tvValidUntil"/>
    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/tvNumZones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/label_zones"
        app:layout_constraintStart_toStartOf="@+id/mbNumZones"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextViewLightDetail"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbNumZones"
        android:clickable="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumZones"
        app:layout_constraintWidth_percent="0.12"
        style="@style/ButtonDetailCard.Green"/>
    <TextView
        android:textColor="@color/white"
        android:id="@+id/tvValidUntil"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/label_valid_until"
        android:lines="1"
        android:layout_marginStart="@dimen/spacing_small"
        app:layout_constraintStart_toEndOf="@+id/mbNumZones"
        app:layout_constraintTop_toTopOf="@+id/tvNumZones"
        style="@style/TextViewLightDetail"/>
    <com.google.android.material.button.MaterialButton
        android:gravity="center"
        android:id="@+id/mbValidUntil"
        android:clickable="false"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:text="@string/label_not_used"
        android:layout_marginStart="@dimen/spacing_small"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/mbNumZones"
        app:layout_constraintStart_toEndOf="@+id/mbNumZones"
        app:layout_constraintTop_toTopOf="@+id/mbNumZones"
        app:layout_constraintWidth_percent="0.34"
        style="@style/ButtonDetailCard.Green"/>
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/brValidUtil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="mbValidUntil"/>
    <TextView
        android:id="@+id/tvExpiredInfo"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_expired"
        app:layout_constraintStart_toStartOf="@+id/mbValidUntil"
        app:layout_constraintTop_toBottomOf="@+id/mbValidUntil"
        style="@style/TextViewExpired"/>
    <TextView
        android:id="@+id/tvExtendedInfo"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_extended"
        app:layout_constraintStart_toStartOf="@+id/mbValidUntil"
        app:layout_constraintTop_toBottomOf="@+id/tvExpiredInfo"
        style="@style/TextViewExpired"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbRechargeCtaPass"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/label_recharge"
        android:layout_marginStart="@dimen/spacing_small"
        app:layout_constraintBottom_toBottomOf="@+id/mbNumZones"
        app:layout_constraintStart_toEndOf="@+id/tvValidUntil"
        app:layout_constraintTop_toTopOf="@+id/mbNumZones"
        style="@style/ButtonDetailCard.Yellow"/>
</androidx.constraintlayout.widget.ConstraintLayout>
